--- a/game.css
+++ b/game.css
@@ -4,3 +4,16 @@
     font-weight: normal;
     src: local("?"), url("ethnocentric.ttf") format("truetype");
 }
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(images/loader.gif) center no-repeat #fff;
+  background-size: 100%;
+}
